--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.0.0'  # اپنی Flutter ورژن یہاں لکھیں
+        flutter-version: '3.0.0
 
     - name: Install dependencies
       run: flutter pub get
